--- a/src/app/pendulum/pendulum.scss
+++ b/src/app/pendulum/pendulum.scss
@@ -11,28 +11,77 @@
 		right: -70%;
 		top: -50%;
 		bottom: -50%;
-		transform: rotate(-10deg);
 		transform-origin: 50% 25%;
 	}
 	.logo{
+
 	}
 	.bulb{
+		transform-origin: 50% 0;
 		img{
 			position: absolute;
 			left: 50%;
 			transform:translate(-50%,0);
 		}
-		.perno{
-			margin-left: 10px;
-		}
 		.bulb_lighting{
+			animation: pendulumBulbAnimation 1.5s infinite;
 			top:155px;
 		}
 		.light{
+			animation: pendulumLightAnimation 1.5s infinite;
 			top:55px;
 		}
 	}
 	.pendulum{
+		animation: pendulumAnimation 3s cubic-bezier(0.51, 0.01, 0.54, 0.5) infinite;
+	}
+}
 
+@keyframes pendulumAnimation{
+	0%,100%{
+		transform:rotate(10deg);
+	}
+	50%{
+		transform:rotate(-10deg);
+	}
+}
+@keyframes pendulumLightAnimation{
+	0%,100%{
+		opacity: 0.5;
+	}
+	50%{
+		opacity: 0.4;
+	}
+	52%{
+		opacity: 0.1;
+	}
+	57%{
+		opacity: 0.5;
+	}
+	60%{
+		opacity: 0.0;
+	}
+	63%{
+		opacity: 0.4;
+	}
+}
+@keyframes pendulumBulbAnimation{
+	0%,100%{
+		opacity: 1;
+	}
+	50%{
+		opacity: 0.8;
+	}
+	52%{
+		opacity: 0.6;
+	}
+	57%{
+		opacity: 1;
+	}
+	60%{
+		opacity: 0.6;
+	}
+	63%{
+		opacity: 1;
 	}
 }
